syntax = "proto3";

package solaris;

message FullSvmChain {
    FullSvmInitializationMessages init_messages = 1;

    repeated FullSvmAuxiliaryMessages auxiliary_messages = 2;

    ClaimFromProjectBudget claim = 3;
}

message FullSvmInitializationMessages {
    CreateGlobalConfig create_global_config = 1;

    repeated AddCurrencyToken add_currencies = 2;

    repeated CreateProject create_projects = 3;

    repeated DepositFungibleToken initial_fungible_deposits = 4;
    repeated DepositNonFungibleToken initial_nft_deposits = 5;
}

message FullSvmAuxiliaryMessages {
    oneof message {
        // Admin operations
        UpdateGlobalConfig update_global_config = 1;
        UpdateGlobalConfigFees update_global_fees = 2;
        AddNoClaimFeeWhitelist add_whitelist = 3;
        RemoveNoClaimFeeWhitelist remove_whitelist = 4;
        PauseProgram pause = 5;
        UnpauseProgram unpause = 6;

        // Role management
        GrantGlobalRole grant_global_role = 7;
        RevokeGlobalRole revoke_global_role = 8;
        RenounceGlobalRole renounce_global_role = 9;

        // Currency management
        AddCurrencyToken add_currency = 10;
        UpdateCurrencyToken update_currency = 11;
        RemoveCurrencyToken remove_currency = 12;

        // Project management
        CreateProject create_project = 13;
        UpdateProject update_project = 14;
        UpdateProjectFees update_project_fees = 15;

        // Project roles
        GrantProjectRole grant_project_role = 16;
        RevokeProjectRole revoke_project_role = 17;
        RenounceProjectRole renounce_project_role = 18;

        // Budget operations
        DepositFungibleToken deposit_fungible = 19;
        DepositNonFungibleToken deposit_nft = 20;
        RemoveFungibleToken remove_fungible = 21;
        RemoveNonFungibleToken remove_nft = 22;
        ClaimFromProjectBudget claim_from_budget = 23; 

        // Cross-program testing
        SystemProgramTransfer system_transfer = 30;

        // SPL Token operations
        SplTokenFreezeAuthorityCheck spl_freeze_authority_check = 31;
    }
}

// ============= Admin Operations =============

message CreateGlobalConfig {
    uint64 claim_cooldown = 1; 
    uint32 authority_id = 2; 
}

message UpdateGlobalConfig {
    optional uint64 claim_cooldown = 1;
    optional uint32 required_signers_for_claim = 2;
    uint32 authority_id = 3; 
}

message UpdateGlobalConfigFees {
    optional bool use_new_fee_collector = 1; 
    optional uint64 user_native_claim_fee = 2;
    optional uint32 project_claim_fee = 3; 
    optional uint32 remove_fee = 4;         
    uint32 authority_id = 5; 
}

message AddNoClaimFeeWhitelist {
    uint32 user_id = 1; 
    uint32 authority_id = 2; 
}

message RemoveNoClaimFeeWhitelist {
    uint32 user_id = 1; 
    uint32 authority_id = 2; 
}

message PauseProgram {
    uint32 authority_id = 1; 
}

message UnpauseProgram {
    uint32 authority_id = 1; 
}

// ============= Role Management =============

enum GlobalRole {
    ADMIN = 0;
    PAUSER = 1;
    UNPAUSER = 2;
    SIGNER = 3;
}

enum ProjectRole {
    PROJECT_ADMIN = 0;
}

message GrantGlobalRole {
    uint32 account_id = 1; 
    GlobalRole role = 2;
    uint32 authority_id = 3; 
}

message RevokeGlobalRole {
    uint32 account_id = 1; 
    GlobalRole role = 2;
    uint32 authority_id = 3; 
}

message RenounceGlobalRole {
    GlobalRole role = 1;
    uint32 authority_id = 2;
}

// ============= Currency Management =============

enum TokenType {
    NATIVE = 0;
    FUNGIBLE_SPL = 1;
    NON_FUNGIBLE_SPL = 2;
}

message AddCurrencyToken {
    bool use_native = 1; 
    uint32 spl_token_index = 2; 
    uint64 claim_limit_per_cooldown = 3;
    uint32 authority_id = 4;
}

message UpdateCurrencyToken {
    uint32 currency_token_index = 1;
    optional uint64 claim_limit_per_cooldown = 2;
    optional bool is_active = 3;
    uint32 authority_id = 4;
}

message RemoveCurrencyToken {
    uint32 currency_token_index = 1;
    uint32 authority_id = 2;
}

// ============= Project Management =============

message CreateProject {
    string metadata_uri = 1; 
    uint32 authority_id = 2; 
    uint32 admin_id = 3; 
}

message UpdateProject {
    uint32 project_index = 1;
    string metadata_uri = 2;
    uint32 authority_id = 3; 
}

message UpdateProjectFees {
    uint32 project_index = 1;
    optional uint64 user_native_claim_fee = 2;
    optional uint32 project_claim_fee = 3;
    optional uint32 remove_fee = 4;
    uint32 authority_id = 5;
}

// ============= Project Roles =============

message GrantProjectRole {
    uint32 project_index = 1;
    uint32 account_id = 2;
    ProjectRole role = 3;
    uint32 authority_id = 4;
}

message RevokeProjectRole {
    uint32 project_index = 1;
    uint32 account_id = 2;
    ProjectRole role = 3;
    uint32 authority_id = 4;
}

message RenounceProjectRole {
    uint32 project_index = 1;
    ProjectRole role = 2;
    uint32 authority_id = 3;
}

// ============= Budget Operations =============

message DepositFungibleToken {
    uint32 authority_id = 1;
    uint32 project_index = 2;
    uint32 currency_token_index = 3;
    uint64 amount = 4;
}

message DepositNonFungibleToken {
    uint32 authority_id = 1;
    uint32 project_index = 2;
    uint32 currency_token_index = 3;
}

message RemoveFungibleToken {
    uint32 authority_id = 1;
    uint32 project_index = 2;
    uint32 currency_token_index = 3;
    uint32 recipient_id = 4;
    uint64 amount = 5;
}

message RemoveNonFungibleToken {
    uint32 authority_id = 1;
    uint32 project_index = 2;
    uint32 currency_token_index = 3;
}

// ============= Claim Operation =============

enum ClaimReason {
    AFFILIATE_PAYOUT = 0;
    END_USER_PAYOUT = 1;
}

message ClaimFromProjectBudget {
    uint32 project_index = 1;
    uint32 recipient_id = 2;
    uint32 currency_token_index = 3;
    TokenType token_type = 4;
    uint64 amount = 5;
    ClaimReason reason = 6;

    uint32 proof_index = 7;
    int64 deadline = 8;               
    uint32 signer_index = 9;        
}

// ============= Cross-Program Testing =============

message SystemProgramTransfer {
    uint32 to_id = 1;
    uint64 lamports = 2;
    uint32 authority_id = 3;
}

// ============= SPL Token Operations =============
message SplTokenFreezeAuthorityCheck {
    uint32 currency_index = 1;
}

enum CurrencyType {
    CURRENCY_NATIVE = 0;
    CURRENCY_FUNGIBLE = 1;
    CURRENCY_NON_FUNGIBLE = 2;
}